vision now works on picamera + mask that tells what is not ball
vision is on picamera and iso, exposure, white ballance can be controlled
if there is no ball near robot it can now threshold everything and
see what is definitelly not ball

--- a/jupyter/catch_ball-Copy1.ipynb
+++ b/jupyter/catch_ball-Copy1.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -34,76 +34,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(480, 640, 3)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Too many measurments in the input buffer: 819/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 703/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 574/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 531/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 652/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 589/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 636/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 756/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 542/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 507/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 524/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 526/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 511/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 617/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 746/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 512/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 563/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 502/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 738/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 509/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 506/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 546/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 515/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 617/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 520/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 571/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 636/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 523/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 624/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 550/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 504/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 787/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 512/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 541/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 627/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 552/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 512/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 530/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 554/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 564/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 686/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 539/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 542/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 548/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 506/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 519/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 528/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 626/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 535/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 575/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 586/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 575/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 590/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 530/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 507/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 521/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 612/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 505/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 523/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 555/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 572/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 530/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 819/500. Clearing buffer...\n"
+      "640x480\n",
+      "640x480\n",
+      "640x480\n",
+      "640x480\n",
+      "640x480\n",
+      "640x480\n",
+      "0.1374344825744629 169.41267868176286 338.657234191894534\r"
      ]
     }
    ],
@@ -113,10 +50,49 @@
     "anglenum = Value('d', 0.0)\n",
     "distnum = Value('d', 0.0)\n",
     "sizenum = Value('d', 0.0)\n",
-    "p1 = Process(target=loc.localize, args=(robot_angle, xnum, ynum, True))\n",
-    "p2 = Process(target=vision.detect_the_ball, args=(anglenum, distnum, sizenum, True))\n",
-    "p1.start()\n",
+    "recnum = Value('d', 0.0)\n",
+    "erasenum = Value('d', 0.0)\n",
+    "#vision.detect_the_ball(anglenum, distnum, sizenum, recnum, True)\n",
+    "#p1 = Process(target=loc.localize, args=(robot_angle, xnum, ynum, True))\n",
+    "p2 = Process(target=vision.detect_the_ball, args=(anglenum, distnum, sizenum, recnum, erasenum, True))\n",
+    "#p1.start()\n",
     "p2.start()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "erasenum.value = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "erasenum.value = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recnum.value = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recnum.value = 0"
    ]
   },
   {
@@ -177,46 +153,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on module robocup.movement in robocup:\n",
-      "\n",
-      "NAME\n",
-      "    robocup.movement\n",
-      "\n",
-      "FUNCTIONS\n",
-      "    adaptive_speed_ball(angle_to_go, ball_dist, speed, ball_close_speed)\n",
-      "    \n",
-      "    adaptive_speed_line(max_speed, min_speed, upper_dist, x, y, ant)\n",
-      "    \n",
-      "    adaptive_speed_rect(max_speed, min_speed, ball_close_speed, upper_dist, lower_dist, x, y, ant, ball_dist)\n",
-      "    \n",
-      "    flatten_angle(upper_dist, x, y, ant, speed)\n",
-      "    \n",
-      "    line_dists(x1, y1, segments)\n",
-      "    \n",
-      "    move_to(x0, y0, x, y)\n",
-      "    \n",
-      "    robot_angle_to_catch_ball(ball_angle, x, y)\n",
-      "\n",
-      "DATA\n",
-      "    flat_line = [[260, 650, 560, 750], [560, 750, 1360, 750], [1360, 750, ...\n",
-      "    lines = [[260, 260, 570, 260], [570, 260, 570, 410], [570, 410, 660, 5...\n",
-      "\n",
-      "FILE\n",
-      "    /home/pi/Desktop/24.11.2019. - 21h/jupyter/robocup/movement.py\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "help(mov)"
+    "import cv2\n",
+    "\n",
+    "cv2.destroyAllWindows()"
    ]
   },
   {
