--- a/jupyter/catch_ball-Copy1.ipynb
+++ b/jupyter/catch_ball-Copy1.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -35,12 +35,7 @@
      "output_type": "stream",
      "text": [
       "640x480\n",
-      "640x480\n",
-      "640x480\n",
-      "640x480\n",
-      "640x480\n",
-      "640x480\n",
-      "0.1374344825744629 169.41267868176286 338.657234191894534\r"
+      "640x480\n"
      ]
     }
    ],
@@ -53,15 +48,15 @@
     "recnum = Value('d', 0.0)\n",
     "erasenum = Value('d', 0.0)\n",
     "#vision.detect_the_ball(anglenum, distnum, sizenum, recnum, True)\n",
-    "#p1 = Process(target=loc.localize, args=(robot_angle, xnum, ynum, True))\n",
+    "p1 = Process(target=loc.localize, args=(robot_angle, xnum, ynum, False))\n",
     "p2 = Process(target=vision.detect_the_ball, args=(anglenum, distnum, sizenum, recnum, erasenum, True))\n",
-    "#p1.start()\n",
+    "p1.start()\n",
     "p2.start()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,8 +115,8 @@
     "    angle = anglenum.value\n",
     "    ball_size = sizenum.value\n",
     "    dist = distnum.value   \n",
-    "\n",
-    "    seeball += 1 if ball_size > 200 else -1 \n",
+    "    \n",
+    "    seeball += 1 if ball_size > 2 else -1 \n",
     "    if seeball > 10:\n",
     "        seeball = 10\n",
     "    if seeball < -1:\n",
@@ -130,7 +125,7 @@
     "        x = xc\n",
     "    if (yc != -1): \n",
     "        y = yc\n",
-    "        \n",
+    "    \n",
     "    if seeball > 2:\n",
     "        ba = mov.robot_angle_to_catch_ball(angle, x, y)\n",
     "        _, ba = mov.flatten_angle(upper_dist=400, x=x, y=y, ant=ba, speed=robot_speed)\n",
@@ -144,7 +139,7 @@
     "    else:\n",
     "        mov.move_to(x, y, field.x/2, field.y/2)\n",
     "     \n",
-    "    #print(x, y, robot_speed, angle, ba, seeball)#,  end = '\\r')\n",
+    "    print(x, y, robot_speqed, angle, ba, seeball,  \"    d   \", end = '\\r')\n",
     "    time.sleep(0.005)\n",
     "    s.check_pause()\n",
     "    if not s.state(3):\n",
