ball detection works now from centre of the field to anywhere.

--- a/jupyter/catch_ball-Copy1.ipynb
+++ b/jupyter/catch_ball-Copy1.ipynb
@@ -37,6 +37,15 @@
       "640x480\n",
       "640x480\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Too many measurments in the input buffer: 755/500. Clearing buffer...\n",
+      "Too many measurments in the input buffer: 623/500. Clearing buffer...\n",
+      "Too many measurments in the input buffer: 594/500. Clearing buffer...\n"
+     ]
     }
    ],
    "source": [
@@ -49,7 +58,7 @@
     "erasenum = Value('d', 0.0)\n",
     "#vision.detect_the_ball(anglenum, distnum, sizenum, recnum, True)\n",
     "p1 = Process(target=loc.localize, args=(robot_angle, xnum, ynum, False))\n",
-    "p2 = Process(target=vision.detect_the_ball, args=(anglenum, distnum, sizenum, recnum, erasenum, True))\n",
+    "p2 = Process(target=vision.detect_the_ball, args=(anglenum, distnum, sizenum, recnum, erasenum, False))\n",
     "p1.start()\n",
     "p2.start()\n"
    ]
@@ -94,7 +103,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "774.9989845769741 882.3918416673918 0.27078100942201183 167.9977051012163 317.9977051012163 10     d         21.70703650657583 0.13244726647052452 172.61936364115917 322.61936364115917 -1     d    -1     d    61.51169736526789 10     d    1721.6862365065767 0.05401928479433398 8.22672246410815 110.56680616027037 10     d    10     d   156.09919420053714 10     d   \r"
+     ]
+    }
+   ],
    "source": [
     "while s.state(0):\n",
     "    a = 0\n",
@@ -128,7 +145,7 @@
     "    \n",
     "    if seeball > 2:\n",
     "        ba = mov.robot_angle_to_catch_ball(angle, x, y)\n",
-    "        _, ba = mov.flatten_angle(upper_dist=400, x=x, y=y, ant=ba, speed=robot_speed)\n",
+    "        #_, ba = mov.flatten_angle(upper_dist=400, x=x, y=y, ant=ba, speed=robot_speed)\n",
     "        robot_speed, angle_out = mov.adaptive_speed_line(max_speed=0.4 , min_speed=0, upper_dist=800, x=x, y=y, ant=(ba)%360)\n",
     "        \n",
     "        min_speed = robot_speed\n",
@@ -137,9 +154,9 @@
     "        else:\n",
     "            comm.set_moving_angle(angle_out, robot_speed)\n",
     "    else:\n",
-    "        mov.move_to(x, y, field.x/2, field.y/2)\n",
+    "        mov.move_to(x, y, field.x/2, field.y/2, 0.3)\n",
     "     \n",
-    "    print(x, y, robot_speqed, angle, ba, seeball,  \"    d   \", end = '\\r')\n",
+    "    print(x, y, robot_speed, angle, ba, seeball,  \"    d   \", end = '\\r')\n",
     "    time.sleep(0.005)\n",
     "    s.check_pause()\n",
     "    if not s.state(3):\n",
@@ -148,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,21 +176,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'KalmanFilter' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-b73d08fd111b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.005\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mkf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mKalmanFilter\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdim_x\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdim_z\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m f.x = np.array([[field.x/2],\n\u001b[1;32m      4\u001b[0m                 \u001b[0;34m[\u001b[0m\u001b[0mfield\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                 \u001b[0;34m[\u001b[0m\u001b[0;36m0.\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'KalmanFilter' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dt = 0.005\n",
     "kf = KalmanFilter (dim_x=4, dim_z=2)\n",
@@ -214,27 +219,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "20*(0>0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,63 +255,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on module robocup.movement in robocup:\n",
-      "\n",
-      "NAME\n",
-      "    robocup.movement\n",
-      "\n",
-      "FUNCTIONS\n",
-      "    adaptive_speed_ball(angle_to_go, ball_dist, speed, ball_close_speed)\n",
-      "    \n",
-      "    adaptive_speed_line(max_speed, min_speed, upper_dist, x, y, ant)\n",
-      "    \n",
-      "    adaptive_speed_rect(max_speed, min_speed, ball_close_speed, upper_dist, lower_dist, x, y, ant, ball_dist)\n",
-      "    \n",
-      "    flatten_angle(upper_dist, x, y, ant)\n",
-      "    \n",
-      "    line_dists(x1, y1)\n",
-      "    \n",
-      "    move_to(x0, y0, x, y)\n",
-      "    \n",
-      "    robot_angle_to_catch_ball(ball_angle, x, y)\n",
-      "\n",
-      "DATA\n",
-      "    lines = [[260, 260, 570, 260], [570, 260, 570, 410], [570, 410, 660, 5...\n",
-      "\n",
-      "FILE\n",
-      "    /home/pi/Desktop/24.11.2019. - 21h/jupyter/robocup/movement.py\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "help(mov)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(-8.752538256722763, 0.6259580211832472)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mov.flatten_angle(300, 540, 770, 300, 1)"
    ]
