--- a/jupyter/goalie-Copy1.ipynb
+++ b/jupyter/goalie-Copy1.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -35,108 +35,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(480, 640, 3)\n"
+      "640x480\n",
+      "640x480\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Too many measurments in the input buffer: 819/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 745/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 740/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 615/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 667/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 622/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 661/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 552/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 619/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 561/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 622/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 818/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 517/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 756/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 589/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 696/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 610/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 808/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 638/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 613/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 740/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 525/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 714/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 623/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 659/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 667/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 503/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 768/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 712/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 816/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 568/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 792/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 613/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 635/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 564/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 698/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 615/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 641/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 654/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 615/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 588/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 765/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 533/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 552/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 536/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 818/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 746/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 660/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 614/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 792/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 633/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 688/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 543/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 612/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 819/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 734/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 640/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 592/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 732/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 623/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 664/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 610/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 819/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 775/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 586/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 740/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 663/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 640/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 818/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 819/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 635/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 524/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 740/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 689/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 787/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 557/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 819/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 533/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 711/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 609/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 532/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 790/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 738/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 759/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 655/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 597/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 660/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 724/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 505/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 575/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 511/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 594/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 764/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 596/500. Clearing buffer...\n",
-      "Too many measurments in the input buffer: 528/500. Clearing buffer...\n"
+      "Too many measurments in the input buffer: 574/500. Clearing buffer...\n",
+      "Too many measurments in the input buffer: 501/500. Clearing buffer...\n",
+      "Too many measurments in the input buffer: 615/500. Clearing buffer...\n"
      ]
     }
    ],
@@ -146,16 +55,49 @@
     "anglenum = Value('d', 0.0)\n",
     "distnum = Value('d', 0.0)\n",
     "sizenum = Value('d', 0.0)\n",
-    "goalienum = Value('d', 0.0)\n",
-    "goalieothernum = Value('d', 0.0)\n",
-    "xothernum = Value('d', 0.0)\n",
-    "yothernum = Value('d', 0.0)\n",
+    "recnum = Value('d', 0.0)\n",
+    "erasenum = Value('d', 0.0)\n",
+    "#vision.detect_the_ball(anglenum, distnum, sizenum, recnum, True)\n",
     "p1 = Process(target=loc.localize, args=(robot_angle, xnum, ynum, False))\n",
-    "p2 = Process(target=vision.detect_the_ball, args=(anglenum, distnum, sizenum, False))\n",
-    "#p3 = Process(target=blu.communication, args=(goalienum, goalieothernum, xothernum, yothernum))\n",
+    "p2 = Process(target=vision.detect_the_ball, args=(anglenum, distnum, sizenum, recnum, erasenum, False))\n",
     "p1.start()\n",
-    "p2.start()\n",
-    "#p3.start()"
+    "p2.start()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "erasenum.value = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "erasenum.value = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recnum.value = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recnum.value = 0"
    ]
   },
   {
@@ -184,9 +126,9 @@
     "    ball_size = sizenum.value\n",
     "    dist = distnum.value   \n",
     "\n",
-    "    seeball += 1 if ball_size > 200 else -1 \n",
-    "    if seeball > 10:\n",
-    "        seeball = 10\n",
+    "    seeball += 1 if ball_size > 0 else -1 \n",
+    "    if seeball > 3:\n",
+    "        seeball = 3\n",
     "    if seeball < -1:\n",
     "        seeball = -1\n",
     "        \n",
@@ -195,8 +137,10 @@
     "    if (yc != -1): \n",
     "        y = yc\n",
     "        \n",
-    "    goalie_last_time = goalief(angle, ball_size, dist, goalie_last_time)\n",
-    "     \n",
+    "    if s.state(2):\n",
+    "        goalie_last_time = goalief(angle, ball_size, dist, goalie_last_time)\n",
+    "    else:\n",
+    "        attacker()\n",
     "    #print(x, y, robot_speed, angle, ba, seeball)#,  end = '\\r')\n",
     "    time.sleep(0.005)\n",
     "    s.check_pause()\n",
@@ -223,7 +167,7 @@
     "        else:\n",
     "            comm.set_moving_angle(angle_out, robot_speed)\n",
     "    else:\n",
-    "        mov.move_to(x, y, field.x/2, field.y/2, 0.5)    "
+    "        mov.move_to(x, y, field.x/2, field.y/2, 0.6)    "
    ]
   },
   {
