added some tutorials

--- a/jupyter/tutorial/commands.ipynb
+++ b/jupyter/tutorial/commands.ipynb
@@ -195,6 +195,13 @@
   },
   {
    "source": [
+    "Kikcer se isto može pokrenuti tako da se stisne push-button koji se nalazi na plocici između dva zadnja motora i ispred otpornika na najdonjem katu."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "Popis svega"
    ],
    "cell_type": "markdown",
