added lidar, camera and all together

--- a/jupyter/tutorial/localization.ipynb
+++ b/jupyter/tutorial/localization.ipynb
@@ -136,7 +136,13 @@
   },
   {
    "source": [
-    "Važno je napomenuti da unutar funkcije localize se nalazi jedan dio koji je O(n^2) gdje je n broj nađenih zidova, što nije problem u terenu gdje su samo četiri zida (eventualno još dva ili tri zbog drugih robota) no kada stoji van terena u neurednom okruženju (s puno ravnih i neravnih površina) nalazi dosta zidova. To nije bitno ako se samo testira no nemojte očekivati brzinu reakcije kao unutar terena."
+    "Važno je napomenuti da unutar funkcije localize se nalazi jedan dio koji je O(n^2) gdje je n broj nađenih zidova, što nije problem u terenu gdje su samo četiri zida (eventualno još dva ili tri zbog drugih robota) no kada stoji van terena u neurednom okruženju (s puno ravnih i neravnih površina) nalazi dosta zidova. To nije bitno ako se samo testira no nemojte očekivati brzinu reakcije kao unutar terena.\n",
+    "\n",
+    "Ukoliko ste primjetili:\n",
+    "\n",
+    "***Too many measurments in the input buffer: 501/500. Clearing buffer...***\n",
+    "\n",
+    "Ili nešto slično u jednom od testiranja, to je simptom gore opisanoga problema. Process ne stigne procesuirati sva čitanja pa briše višak, to se kao što je rečeno ne događa u urednom okružju terena.\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
